--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.mztaylor</groupId>
-  <artifactId>sampleapp-geb-maven-examples</artifactId>
+  <artifactId>krad-sampleapp-geb-examples</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>Sample Geb Maven Examples</name>
-  <url>http://github.com/mztaylor/sampleapp-geb-maven-example</url>
+  <name>Krad Sampleapp Geb Examples</name>
+  <url>http://github.com/mztaylor/krad-sampleapp-geb-examples</url>
   <properties>
     <gebVersion>0.9.2</gebVersion>
     <seleniumVersion>2.36.0</seleniumVersion>
