--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>Krad Sampleapp Geb Examples</name>
-  <url>http://github.com/mztaylor/krad-sampleapp-geb-examples</url>
+  <url>https://github.com/mztaylor/krad-sampleapp-geb-examples</url>
   <properties>
     <gebVersion>0.9.2</gebVersion>
     <seleniumVersion>2.36.0</seleniumVersion>
